# RoMAE

./: LICENSE  README.md  example.env  pyproject.toml
robite/: model.py  positional_embeddings.py  trainer.py  utils.py
roma/: model.py  positional_embeddings.py  trainer.py  utils.py
romae/: model.py  positional_embeddings.py  trainer.py  utils.py
scripts/: compile_python.sh  install_mn5.sh  run_experiment.sh  run_experiment_mn5.sh  run_experiment_orfeo.sh  run_robite.sh
seft/: model.py  positional_embeddings.py  trainer.py  utils.py
