[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RoMA"
version = "0.1.0-alpha"
description = "Rotary Masked Autoencoder. For use with multi-dimensional sparse data and irregular timeseries."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Uros Zivanovic", email = "uros.zivanovic@studenti.units.it"}
]
dependencies = [
    "torch",
    "numpy",
    "wandb",
    "pydantic-settings",
    "accelerate",
    "safetensors",
    "pynvml"
]

[project.urls]
Repository = "https://github.com/Chromeilion/RoMA"

[tool.setuptools.packages.find]
include = ["roma"]