[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RoMAE"
version = "0.1.0-alpha"
description = "Rotary Masked Autoencoder. For use with multi-dimensional sparse data, irregular timeseries, and more!."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "wandb",
    "pydantic-settings",
    "accelerate",
    "safetensors",
    "pynvml",
    "einops"
]

[tool.setuptools.packages.find]
include = ["romae"]
