[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "RoMAE"
version = "0.9.0-alpha"
description = "Rotary Masked Autoencoder. For use with multi-dimensional sparse data, irregular timeseries, and more!."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
maintainers = [
    {name = "Uros Zivanovic"}
]
dependencies = [
    "torch",
    "numpy",
    "wandb",
    "pydantic-settings",
    "accelerate",
    "safetensors",
    "nvidia-ml-py",
    "einops"
]

[project.urls]
Repository = "https://github.com/Chromeilion/RoMAE"

[tool.setuptools.packages.find]
include = ["romae"]
